[lib]

[package]
edition = "2021"
name = "sim7020"
version = "0.1.2"
license = "MIT"
description = "driver for sim7020E NB IoT modem"

[dependencies]
embedded-hal = { version = "1.0.0" }

defmt = "0.3"

hex = { version = "0.4.3", default-features = false }
embedded-io = "0.6.1"
at-commands = "0.5.4"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[dev-dependencies]
defmt-test = "0.3.2"
