[lib]

[package]
edition = "2021"
name = "sim7020"
version = "2.2.0"
license = "MIT"
repository = "https://github.com/HerrMuellerluedenscheid/sim7020"
description = "driver for sim7020E NB IoT modem"

[dependencies]
defmt = { version = "1.0.1", optional = true }
embedded-io = { version = "0.7.1", default-features = false, optional = false }
at-commands = "0.5.4"
embedded-io-async = { version = "0.7.0", optional = true }
chrono = { version = "0.4.38", default-features = false }
log = "0.4.22"

[features]
default = []
nonblocking = ["embedded-io-async"]
defmt = ["dep:defmt", "embedded-io/defmt"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[dev-dependencies]
defmt-test = "0.3.2"
